welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:4: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  a%10=c
   ^lastDigit:5: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  b%10=d
   ^