welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
var c:Int=0
var d:Int=0
def lastDigit(a:Int, b:Int):Boolean = {
  a%10=c
  b%10=d
  if (c==d){
    return true
  }else{
    return false
  }
}
  
  